--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,12 @@
 [tool.poetry]
-name = "python-project-generator"
+name = "neural-networks"
 version = "0.1.0"
-description = "Template for generating python projects"
+description = "This repository has some implementations of neural networks developed to practice basic concepts."
 authors = ["Luis Papiernik <lpapiernik24@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+numpy = "^1.24.1"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.19.0"
